infra/prometheus/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app: prometheus
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 9090
    nodePort: 30909
